discussion/kv_engine/126496/126496_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-30044: Modernize using clang-tidy google-explicit-constructor

This adds the explicit keyword to simple cases that do not require
further changes to use an explicit constructor.

Change-Id: I08c088767152793e99c3d8e5a368a0adb1dfcbb3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2020-07-06 10:43:54.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2020-07-06 10:44:18.000000000
Message: 
Patch Set 11:

(5 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-06 11:35:57.000000000
Message: 
Patch Set 11: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3190/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:20:2: error: "Include threadlocal.h instead" [clang-diagnostic-error]
#error "Include threadlocal.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:31: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    explicit ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr)
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:53: error: cannot initialize a parameter of type "int" with an rvalue of type "nullptr_t" [clang-diagnostic-error]
    explicit ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr)
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:53: note: passing argument to parameter "dtor" here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:88:5: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    ThreadLocalDestructor dtor;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vb_commit.h:43:21: warning: pass by value and use std::move [modernize-pass-by-value]
                    const vbucket_state& vbs = {})
                    ^~~~~~~~~~~~~~~~~~~~
                    vbucket_state 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_conn_store.h:33:18: error: variable has incomplete type "Vbid" [clang-diagnostic-error]
            Vbid vbid, const ConnHandler& conn) {
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/conn_store.h:33:7: note: forward declaration of "Vbid"
class Vbid;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/xattr/blob.h:47:35: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    explicit Blob(std::unique_ptr<char[]>& allocator_, size_t size = 0)
                                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3190/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:20:2:
error: "Include threadlocal.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3190/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4632/ : FAILURE

Failure of GoogleTest "AllBackends/DurabilityEPBucketTest.PersistPrepareDelete/persistentRocksdb_value_only":

<pre>
[ RUN      ] AllBackends/DurabilityEPBucketTest.PersistPrepareDelete/persistentRocksdb_value_only
[2020-07-06T10:58:56.948Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_durability_test.cc:470: Failure
[2020-07-06T10:58:56.948Z] Expected equality of these values:
[2020-07-06T10:58:56.948Z]   1
[2020-07-06T10:58:56.948Z]   ckptList.size()
[2020-07-06T10:58:56.948Z]     Which is: 2
[2020-07-06T10:58:56.948Z] [  FAILED  ] AllBackends/DurabilityEPBucketTest.PersistPrepareDelete/persistentRocksdb_value_only, where GetParam() = ("persistentRocksdb", "value_only") (10925 ms)
AllBackends/DurabilityEPBucketTest.PersistPrepareDelete/persistentRocksdb_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4632/ )

Failure of a CTest test [2020-07-06T10:58:56.948Z]  18/412 Test #176: ep-engine_ep_unit_tests.AllBackends/DurabilityEPBucketTest .................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4632/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1697/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25014/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29012/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4560/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12453/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3667/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4730/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-06 13:10:59.000000000
Message: 
Patch Set 11:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3190/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:20:2: error: "Include threadlocal.h instead" [clang-diagnostic-error]
#error "Include threadlocal.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:31: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    explicit ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr)
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:53: error: cannot initialize a parameter of type "int" with an rvalue of type "nullptr_t" [clang-diagnostic-error]
    explicit ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr)
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:53: note: passing argument to parameter "dtor" here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:88:5: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    ThreadLocalDestructor dtor;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/vb_commit.h:43:21: warning: pass by value and use std::move [modernize-pass-by-value]
                    const vbucket_state& vbs = {})
                    ^~~~~~~~~~~~~~~~~~~~
                    vbucket_state 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/mock/mock_conn_store.h:33:18: error: variable has incomplete type "Vbid" [clang-diagnostic-error]
            Vbid vbid, const ConnHandler& conn) {
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/conn_store.h:33:7: note: forward declaration of "Vbid"
class Vbid;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/xattr/blob.h:47:35: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    explicit Blob(std::unique_ptr<char[]>& allocator_, size_t size = 0)
                                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3190/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:20:2:
error: "Include threadlocal.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3190/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1697/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25014/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29012/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4560/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12453/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3667/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4730/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4637/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
